# good_practices_ml

./: .gitignore  Pipfile  README.md  compare_datasets_and_prompts.py  paths.yaml  prompt_compare_config.yaml  pyproject.toml  requirement.txt
CLIP_Embeddings/: analysis.ipynb  generate_embeddings.py
CLIP_Experiment/: evaluate.py  evaluate_results_with_metrics.py  generate_confusion_matrices.py  run_datasets_and_prompts.py  run_statistical_tests.py
Embeddings/: analysis.ipynb  bigfoto_embeddings.py  calculate_distances.py  create_strongly_balanced_training.py  geoguessr_embeddings.py  merge_geoguessr_embeddings.py  prompt_embeddings.ipynb  shuffle.py  training_testing_sets_creation.py
country_list/: add_regions_to_country_list.py  country_region.py  create_continents.py  test.py
countryguessr/: __init__.py  __version__.py
data_collection/: data_finding.py
data_exploration/: data_profile.py  geoguessr_profile.html  image_distribution.csv  world_heat_map.py
data_finding/: UNSD_Methodology.csv  bounding_boxes.csv  country_list.csv  country_list_region.csv  country_region.py  create_continents.py  data_finding.py  get_aerial_images.py  get_travel_images.py  interior_boxes.csv  island_bounding_boxes.csv  regions.json  test.py
finetuning/: analyze_csv_files.ipynb  create_datasets_from_embddings.py  generate_image_embeddings.py  load_and_test_models.ipynb  merge_seeds.sh  result_analysis.ipynb  run_experiments.py  run_experiments_geo_strongly_balanced.py  run_experiments_geo_unbalanced.py  run_experiments_geo_weakly_balanced.py  run_experiments_mixed_strongly_balanced.py  run_experiments_mixed_weakly_balanced.py
(+738 files in other folders)
